--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hardware Engineer Portfolio">
-    <title>Digital-Logic.xyz</title>
+    <title>My Portfolio</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -80,47 +80,27 @@
     </style>
 </head>
 <body>
-<header>
-    <h1>My Portfolio</h1>
-    <p>Hardware Engineer | Astrophysics Enthusiast | Nuclear Physics Explorer</p>
-</header>
-<nav>
-    <a href="#about">About Me</a>
-    <a href="#projects">Projects</a>
-    <a href="#contact">Contact</a>
-</nav>
-<div class="container">
-    <section id="about" class="section">
-        <h2>About Me</h2>
-        <p>Welcome! I am a hardware engineer with a passion for astrophysics and nuclear physics. I enjoy creating innovative projects that merge technology and science. This portfolio showcases my work and interests.</p>
-    </section>
-    <section id="projects" class="section">
-        <h2>Projects</h2>
-        <ul class="project-list">
-            <li class="project-item">
-                <h3>8-bit CPU</h3>
-                <p>An 8-bit CPU designed from scratch, using my own custom instruction set.</p>
-            </li>
-            <li class="project-item">
-                <h3>OakNet</h3>
-                <p>A huge project in the game named "Oaklands" on roblox. A 8x8 LED screen with HTTP data transmission.</p>
-            </li>
-            <!-- Add more project items here -->
-        </ul>
-    </section>
-    <section id="contact" class="section">
-        <h2>Contact</h2>
-        <p>Feel free to reach out if you'd like to collaborate or learn more about my projects.</p>
-        <p>Email: siubikYT@digital-logic.xyz</p>
-        <p>GitHub: <a href="https://github.com/siubikyt" target="_blank">github.com/siubikyt</a></p>
-    </section>
-</div>
-<footer>
-    <p>&copy; 2024 Jakub Kijewski. All rights reserved.</p>
-</footer>
-<script>
-    // Optional: Add interactive JavaScript here
-    console.log('Welcome to my portfolio site!');
-</script>
+    <header>
+        <h1>My Portfolio</h1>
+        <p>Hardware Engineer | Astrophysics Enthusiast | Nuclear Physics Explorer</p>
+    </header>
+    <nav>
+        <a href="about.html">About Me</a>
+        <a href="projects.html">Projects</a>
+        <a href="contact.html">Contact</a>
+    </nav>
+    <div class="container">
+        <section class="section">
+            <h2>Welcome to My Portfolio</h2>
+            <p>This is the main page of my portfolio. Use the navigation links above to explore more about me, my projects, and how to get in touch.</p>
+        </section>
+    </div>
+    <footer>
+        <p>&copy; 2024 siubikYT. All rights reserved.</p>
+    </footer>
+    <script>
+        // Optional: Add interactive JavaScript here
+        console.log('Welcome to my portfolio site!');
+    </script>
 </body>
 </html>
