--- a/index.html
+++ b/index.html
@@ -1,498 +1,81 @@
-
-
-ChatGPT
-Powiedziałeś(-aś):
-what is digital logic name most popular
-ChatGPT powiedział:
-ChatGPT
-Digital logic refers to the fundamental principles and methods used to design and implement electronic systems that process binary information (0s and 1s). Here are some of the most popular types and names associated with digital logic:
-
-Popular Digital Logic Components
-Logic Gates
-
-AND, OR, NOT, XOR, NAND, NOR
-Built using transistors to perform basic Boolean operations.
-Flip-Flops
-
-SR (Set-Reset) Flip-Flop
-D (Data) Flip-Flop
-T (Toggle) Flip-Flop
-JK Flip-Flop
-Used for storing bits and implementing sequential logic.
-Multiplexers (MUX) and Demultiplexers (DEMUX)
-
-Route signals in digital systems.
-Encoders and Decoders
-
-Convert information between binary and human-readable formats.
-Registers
-
-Hold multi-bit data for temporary storage.
-Counters
-
-Binary counters, Ripple counters, Synchronous counters.
-Used in timing and control circuits.
-Arithmetic Logic Units (ALUs)
-
-Perform mathematical and logical operations.
-Popular Digital Logic Families
-TTL (Transistor-Transistor Logic)
-
-Fast, widely used in older digital systems.
-CMOS (Complementary Metal-Oxide-Semiconductor)
-
-Low power consumption and modern preference.
-ECL (Emitter-Coupled Logic)
-
-High speed, used in specialized applications.
-Key Theories and Concepts
-Boolean Algebra
-
-Theoretical basis for digital logic.
-Karnaugh Maps (K-Maps)
-
-Simplify logic expressions.
-Finite State Machines (FSMs)
-
-Model sequential logic systems.
-De Morgan's Theorems
-
-Help simplify logic expressions.
-Would you like more information on any of these? Or are you interested in building circuits using digital logic?
-
-
-
-
-
-Powiedziałeś(-aś):
-I own digital-logic.xyz  how do I make my own email on that domain for free?
-ChatGPT powiedział:
-ChatGPT
-To create a free email address using your custom domain digital-logic.xyz, follow these steps:
-
-Option 1: Zoho Mail (Free Plan)
-Sign Up on Zoho Mail:
-
-Visit Zoho Mail.
-Choose the Forever Free Plan (supports 5 users and 5 GB/user).
-Verify Domain Ownership:
-
-Add your domain digital-logic.xyz to Zoho Mail.
-Zoho will provide DNS records (TXT, CNAME, or MX) that you need to configure in your domain registrar's settings.
-Update DNS Records:
-
-Log in to your domain registrar (where you bought digital-logic.xyz).
-Go to DNS Settings or DNS Management.
-Add the records provided by Zoho Mail.
-Create Your Email Address:
-
-Once verified, you can set up email addresses like yourname@digital-logic.xyz.
-Access Email:
-
-Use Zoho’s webmail interface or configure it in email apps like Outlook or Gmail.
-Option 2: ImprovMX + Gmail
-Set Up ImprovMX:
-
-Go to ImprovMX and sign up (free tier available).
-Add your domain digital-logic.xyz.
-Verify ownership by adding provided DNS records in your domain registrar’s settings.
-Forward Emails:
-
-ImprovMX forwards all emails sent to yourname@digital-logic.xyz to your personal email (e.g., Gmail).
-Send Emails from Custom Domain:
-
-Configure Gmail to send emails as yourname@digital-logic.xyz:
-Open Gmail settings → Accounts and Import.
-Under Send mail as, click Add another email address.
-Follow the steps to set up SMTP using ImprovMX or your domain registrar's mail server.
-Option 3: Your Domain Registrar's Email Service
-Many domain registrars (like Namecheap, Google Domains, or Cloudflare) offer free email forwarding services:
-Log in to your domain account.
-Look for "Email" or "Email Forwarding" in the control panel.
-Set up a forwarding address like yourname@digital-logic.xyz to redirect to your personal email.
-DNS Configuration Note
-For all methods, you need to update your DNS records:
-
-MX Records: Route email to your email provider.
-TXT Records: Verify domain ownership.
-SPF, DKIM, DMARC: (Optional but recommended) Improve email deliverability and prevent spam.
-Let me know if you need help with the DNS setup!
-
-
-
-
-
-Powiedziałeś(-aś):
-I bought a domain without hosting on namecheap. How do I host it on my computer?
-ChatGPT powiedział:
-ChatGPT
-Hosting a website on your computer can be an exciting project! Here’s a step-by-step guide to host your digital-logic.xyz domain on your own machine:
-
-1. Prepare Your Computer for Hosting
-You’ll need to turn your computer into a web server. To do this:
-
-Install Web Server Software
-Choose one of the following:
-
-Apache:
-Install XAMPP (includes Apache, PHP, and MySQL).
-NGINX:
-Install NGINX, suitable for modern lightweight hosting.
-Local HTTP Server:
-Use Python’s built-in server (for small, static sites):
-bash
-Skopiuj kod
-python -m http.server 8000
-This serves files from your working directory.
-Prepare Your Website Files
-Store your website files (e.g., HTML, CSS, JS) in the designated web server directory:
-For XAMPP: htdocs folder.
-For NGINX/Apache: Custom folder like /var/www/html.
-2. Configure Your Router for Public Access
-To make your site accessible online:
-
-Find Your Local IP Address:
-
-On Windows: ipconfig → Look for IPv4 Address.
-On macOS/Linux: ifconfig or ip addr show.
-Port Forwarding:
-
-Log in to your router (typically at 192.168.1.1 or 192.168.0.1).
-Go to Port Forwarding settings.
-Forward port 80 (HTTP) or 443 (HTTPS) to your computer's local IP address.
-Check Your Public IP:
-
-Visit WhatIsMyIP to find your public IP address.
-Your website will be accessible at http://<your-public-ip>.
-3. Connect Your Domain to Your Computer
-Update DNS Settings on Namecheap:
-
-Go to Namecheap’s Domain List → Manage your domain.
-Under Advanced DNS, update the following:
-A Record:
-Host: @
-Value: Your public IP address.
-TTL: Automatic
-CNAME Record (optional for www subdomain):
-Host: www
-Value: @.
-Dynamic IP Consideration: If your public IP changes frequently, use a dynamic DNS service like No-IP or DuckDNS.
-
-4. Test Your Setup
-Visit http://digital-logic.xyz in a browser. If set up correctly, your site should load.
-If it doesn’t, check:
-Your firewall settings (allow incoming traffic on port 80/443).
-Router configuration (ensure correct port forwarding).
-5. Improve Security and Reliability
-Use HTTPS:
-
-Install a free SSL certificate with Let’s Encrypt.
-Optimize Your Server:
-
-Configure caching and compression for faster performance.
-Monitor Uptime:
-
-Use tools like UptimeRobot to ensure your server is always running.
-Would you like help with any of these steps, such as configuring Namecheap’s DNS or setting up a web server?
-
-
-
-
-
-Powiedziałeś(-aś):
-I bought the domain. Where can I host it?
-ChatGPT powiedział:
-ChatGPT
-If you've purchased a domain on Namecheap, you can host it on various platforms depending on your budget, the complexity of your website, and your hosting requirements. Here are some popular hosting options:
-
-1. Free Hosting Options
-GitHub Pages (for static sites):
-
-Ideal for HTML/CSS/JS projects or sites generated with Jekyll.
-Guide to GitHub Pages.
-Custom domain support (you can connect digital-logic.xyz).
-Netlify:
-
-Free for static sites.
-Easy deployment with drag-and-drop or Git integration.
-Free HTTPS and custom domain support.
-Vercel:
-
-Perfect for modern frameworks like React, Next.js, or static sites.
-Free tier includes fast global CDN and custom domain support.
-Cloudflare Pages:
-
-Free hosting for JAMstack and static sites.
-Great integration with Cloudflare DNS and performance tools.
-2. Shared Hosting (Budget-Friendly Paid Options)
-Namecheap Hosting:
-
-Since you purchased your domain there, they offer affordable hosting starting at ~$2/month.
-Namecheap Hosting Plans.
-Hostinger:
-
-Affordable plans starting at ~$1.99/month.
-Reliable for beginners with an easy control panel.
-Bluehost:
-
-Beginner-friendly and recommended for WordPress sites.
-Plans start at ~$2.95/month.
-3. VPS Hosting (More Control)
-For technical users who want flexibility:
-
-DigitalOcean:
-
-Starting at ~$5/month.
-Perfect for hosting custom applications or self-managed websites.
-Requires basic server management skills.
-Linode:
-
-Similar to DigitalOcean; plans from $5/month.
-Offers powerful server configurations for developers.
-Vultr:
-
-Affordable VPS hosting starting at ~$2.50/month.
-Good for small projects needing more control.
-4. Managed Hosting (Hassle-Free)
-SiteGround:
-
-High performance and excellent customer support.
-Custom domain and WordPress hosting.
-Plans start at ~$3.99/month.
-WP Engine:
-
-Premium managed WordPress hosting.
-Higher costs (~$20/month) but optimized for WordPress performance.
-5. Cloud Hosting
-Google Cloud Platform:
-
-Free tier includes hosting for small static sites on Firebase or Google Cloud Storage.
-Scalable for larger applications.
-AWS (Amazon Web Services):
-
-Free tier (12 months) includes S3 (static sites) and Lightsail for web apps.
-Microsoft Azure:
-
-Free tier available for hosting static and dynamic sites.
-6. Special Hosting for Personal Projects
-InfinityFree (Free Hosting):
-
-Free unlimited hosting for small sites.
-Includes a free control panel but has ads on the backend.
-AwardSpace:
-
-Free hosting plan with 1 GB disk space and 5 GB bandwidth.
-Connecting Your Domain
-No matter the hosting provider you choose:
-
-Update DNS Records:
-
-Log in to your Namecheap account.
-Go to Domain List → Manage your domain.
-Add the hosting provider’s nameservers or set up A/CNAME records.
-Set Up Hosting:
-
-Follow your chosen host’s instructions for connecting your domain.
-Would you like help selecting the best host for digital-logic.xyz based on your website needs? Or assistance with connecting your domain?
-
-
-
-
-
-Powiedziałeś(-aś):
-will github host my custom domain for me for free?
-ChatGPT powiedział:
-ChatGPT
-Yes, GitHub Pages will host your website on your custom domain (like digital-logic.xyz) for free! It’s an excellent option for static websites built with HTML, CSS, and JavaScript.
-
-How to Set Up GitHub Pages with Your Custom Domain
-1. Prepare Your Repository
-Create a new repository on GitHub:
-
-Name it (e.g., digital-logic-site).
-Initialize it with a README.md file (optional).
-Add your website files:
-
-Upload your HTML, CSS, JS files directly or use Git to push them to your repository.
-Enable GitHub Pages:
-
-Go to the repository's Settings → Pages.
-Under Source, select:
-Branch: main (or master if using the default older branch name).
-Folder: /root or /docs, depending on where your files are stored.
-GitHub will generate a URL like https://yourusername.github.io/digital-logic-site.
-2. Set Up Your Custom Domain
-Go to the Pages settings in your repository.
-Under Custom domain, enter your domain: digital-logic.xyz.
-GitHub will provide DNS records:
-Typically, two A records and a CNAME record.
-3. Configure Namecheap DNS
-Log in to Namecheap.
-
-Go to Domain List → Manage your domain.
-
-Under Advanced DNS:
-
-Add two A Records:
-Host: @
-Value: 185.199.108.153
-(Repeat for 185.199.109.153, 185.199.110.153, and 185.199.111.153).
-Add a CNAME Record:
-Host: www
-Value: yourusername.github.io.
-Save your changes.
-
-4. Verify and Test
-Wait for DNS propagation (can take up to 24 hours but often faster).
-Visit your custom domain (e.g., digital-logic.xyz) in a browser to ensure it works.
-If HTTPS is not automatically enabled:
-Go back to the GitHub Pages settings.
-Check the box for Enforce HTTPS.
-What Can You Host?
-Static websites (HTML/CSS/JS).
-Static site generators (e.g., Jekyll, Hugo).
-No server-side scripting (like PHP, Python, Node.js).
-Would you like step-by-step guidance for any of these steps?
-
-
-
-
-
-Powiedziałeś(-aś):
-can the respository be private or does it have to be public and opensource?
-ChatGPT powiedział:
-ChatGPT
-GitHub Pages now allows private repositories to host a website, but there are some limitations depending on your account type:
-
-Private Repository Hosting on GitHub Pages
-Free Plan:
-
-Private repositories can host GitHub Pages.
-The site is deployed from a branch (e.g., main or gh-pages).
-However, the website itself will still be publicly accessible to visitors.
-You cannot restrict access to the published website.
-GitHub Pro or Team Plan:
-
-With GitHub Pro or a paid plan, you can use GitHub Pages with private repositories.
-If combined with a GitHub Enterprise account or a tool like GitHub Actions, you could limit access further (e.g., authenticated users only).
-Key Considerations for Hosting from a Private Repo
-A private repository keeps your source code private.
-The hosted GitHub Pages site will always be publicly visible, even if the repository is private. This is because GitHub Pages is designed for public web hosting.
-Steps for Hosting from a Private Repo
-Follow the same setup process as a public repo (create a repo, push your website files, enable GitHub Pages).
-Go to your repository's Settings → Pages → Choose a source branch.
-The website will still be accessible at https://<yourusername>.github.io/<repository> or your custom domain.
-Alternatives for Restricted Access
-If you need the website itself to be private (e.g., restricted to specific users):
-
-Host Locally or on a Private Network.
-Use other hosting platforms that allow for private site hosting, such as:
-Netlify Pro (supports password-protected sites).
-Vercel with authentication.
-Self-hosting via VPS.
-Would you like help setting up GitHub Pages or considering a private alternative?
-
-
-
-
-
-Powiedziałeś(-aś):
-make me a good looking website using html, css, and javascript compatable with github pages. I want it to be easy to customize so I can add information about projects easily. I also want it to be a sort of portfolio. I am a hardware engineer, I am interested in astrophysics, nuclear physics.
-ChatGPT powiedział:
-ChatGPT
-Portfolio Website
-Here is a clean and customizable portfolio website template using HTML, CSS, and a bit of JavaScript. It's structured for easy updates, so you can add more projects or sections as needed.
-
-Would you like guidance on deploying this to GitHub Pages or further customization tips?
-
-
-2/2
-
-Powiedziałeś(-aś):
-Can you make other 3 pages for #About Me, #Projects, #Contact. I saw that you added buttons for that. so it would be cool if they actually led somewhere instead of doing absolutely nothing
-ChatGPT powiedział:
-ChatGPT
-Edytowano Portfolio Website
-I have updated the homepage to include functional links for About Me, Projects, and Contact, leading to about.html, projects.html, and contact.html. Next, I can create the content for those pages. Would you like me to proceed?
-
-
-
-
-
-Powiedziałeś(-aś):
-Make the main page have some cool stuff though. Like recent projects. And still have about me but a shortened version. Contact too just email and github though\
-ChatGPT powiedział:
-ChatGPT
-Edytowano Portfolio Website
-I've updated the main page to include sections for About Me, Recent Projects, and Contact in a concise format. It now highlights your recent projects and provides quick links to contact information. Let me know if you'd like to tweak any part further!
-
-
-
-
-
-
-
-
-
-
-
-ChatGPT może popełniać błędy. Sprawdź ważne informacje.
-?
-
-Portfolio Website
-
-
-
-
-
-
-79
-80
-81
-82
-83
-84
-85
-86
-87
-88
-89
-90
-91
-92
-93
-94
-95
-96
-97
-98
-99
-100
-101
-102
-103
-104
-105
-106
-107
-108
-109
-110
-111
-112
-113
-114
-115
-116
-117
-118
-119
-120
-121
-122
-123
-124
-125
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Hardware Engineer Portfolio">
+    <title>digital-logic.xyz</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        header {
+            background-color: #444;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        nav {
+            background-color: #333;
+            overflow: hidden;
+        }
+        nav a {
+            float: left;
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+        nav a:hover {
+            background-color: #575757;
+        }
+        .container {
+            padding: 20px;
+        }
+        .section {
+            margin: 20px 0;
+            padding: 20px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+        .section h2 {
+            margin: 0 0 10px;
+            color: #444;
+        }
+        .project-list {
+            list-style: none;
+            padding: 0;
+        }
+        .project-item {
+            margin: 10px 0;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            background-color: #f9f9f9;
+        }
+        .project-item h3 {
+            margin: 0;
+            font-size: 1.2em;
+        }
+        .project-item p {
+            margin: 5px 0 0;
+            color: #555;
+        }
+        footer {
+            background-color: #222;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
@@ -520,7 +103,7 @@ Portfolio Website
                 </li>
                 <li class="project-item">
                     <h3>OakNet</h3>
-                    <p>A project in a game called "Oaklands" on roblox. A 8x8 LED matrix with keyboard input and HTTP requests.</p>
+                    <p>A project in a roblox experience called "Oaklands". A 8x8 LED matrix with keyboard input and HTTP.</p>
                 </li>
             </ul>
         </section>
