--- a/projects.html
+++ b/projects.html
@@ -106,11 +106,33 @@
     <h2>Projects</h2>
     <div class="project-item">
       <h3>8-bit CPU Design</h3>
-      <img src="images/cpu-project.jpg" alt="8-bit CPU Design">
+      <img src="images/8 bit CPU.png" alt="8-bit CPU Design">
       <p>A complete custom 8-bit CPU, featuring an original instruction set and ALU.</p>
       <button class="show-more" onclick="toggleInfo(this)">Show More</button>
       <div class="more-info">
-        <p>WIP</p>
+        <p>SPECS:
+
+           RAM: 7 bytes of binary cells.
+           CLOCK: Not clocked, but can be changed quite easily to be.
+           ALU: 8 bit up to 256 decimal numbers. A+B, A-B, A XOR B, A OR B, A AND B
+           ROM: 15 programmable instructions.
+           PROGRAM RAM: However much you program. You need to build the program your self.
+           CACHE: 1 byte (ALU buffer to RAM) 
+           Instructions:
+          
+           0000 - ADD
+           0001 - SUB
+           0010 - A XOR B
+           0011 - A OR B
+           0100 - A AND B
+           0101 - MOVE (TBD)
+           0110 - CLEAR (TBD)
+           0111 - READ (Does nothing)
+           1000 - WRITE / READ
+           1001 - CLOCK CACHE (RESET ALU BUFFER TO MEMORY)
+          <img src="images/8 bit CPU.png">
+          <img src="images/8 bit CPU instructions.png">
+</p>
       </div>
     </div>
     <div class="project-item">
@@ -119,7 +141,8 @@
       <p>A relay-driven 8x8 LED display for digital logic demonstrations.</p>
       <button class="show-more" onclick="toggleInfo(this)">Show More</button>
       <div class="more-info">
-        <p>WIP</p>
+        <p>WIP
+</p>
       </div>
   </section>
 </div>
