--- a/projects.html
+++ b/projects.html
@@ -105,31 +105,30 @@
   <section class="section">
     <h2>Projects</h2>
     <div class="project-item">
-      <h3>8-bit CPU Design</h3>
-      <img src="images/8 bit CPU.png" alt="8-bit CPU Design">
+      <h3>8-bit CPU</h3>
       <p>A complete custom 8-bit CPU, featuring an original instruction set and ALU.</p>
       <button class="show-more" onclick="toggleInfo(this)">Show More</button>
       <div class="more-info">
-        <p>SPECS:
-
-           RAM: 7 bytes of binary cells.
-           CLOCK: Not clocked, but can be changed quite easily to be.
-           ALU: 8 bit up to 256 decimal numbers. A+B, A-B, A XOR B, A OR B, A AND B
-           ROM: 15 programmable instructions.
-           PROGRAM RAM: However much you program. You need to build the program your self.
-           CACHE: 1 byte (ALU buffer to RAM) 
-           Instructions:
-          
-           0000 - ADD
-           0001 - SUB
-           0010 - A XOR B
-           0011 - A OR B
-           0100 - A AND B
-           0101 - MOVE (TBD)
-           0110 - CLEAR (TBD)
-           0111 - READ (Does nothing)
-           1000 - WRITE / READ
-           1001 - CLOCK CACHE (RESET ALU BUFFER TO MEMORY)
+        <p>SPECS:<br>
+           <div>
+           RAM: 7 bytes of binary cells.<br>
+           CLOCK: Not clocked, but can be changed quite easily to be.<br>
+           ALU: 8 bit up to 256 decimal numbers. A+B, A-B, A XOR B, A OR B, A AND B<br>
+           ROM: 15 programmable instructions.<br>
+           PROGRAM RAM: However much you program. You need to build the program your self.<br>
+           CACHE: 1 byte (ALU buffer to RAM)<br>
+           Instructions:<br>
+           <div>
+           0000 - ADD<br>
+           0001 - SUB<br>
+           0010 - A XOR B<br>
+           0011 - A OR B<br>
+           0100 - A AND B<br>
+           0101 - MOVE (TBD)<br>
+           0110 - CLEAR (TBD)<br>
+           0111 - READ (Does nothing)<br>
+           1000 - WRITE / READ<br>
+           1001 - CLOCK CACHE (RESET ALU BUFFER TO MEMORY)<br>
           <img src="images/8 bit CPU.png">
           <img src="images/8 bit CPU instructions.png">
 </p>
