--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hardware Engineer Portfolio">
-    <title>digital-logic.xyz</title>
+    <title>Digital-Logic.xyz</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -81,8 +81,8 @@
 </head>
 <body>
     <header>
-        <h1>My Portfolio</h1>
-        <p>Hardware Engineer | Astrophysics Enthusiast | Nuclear Physics Explorer</p>
+        <h1>Digital-Logic.xyz</h1>
+        <p>Hardware Engineering | </p>
     </header>
     <nav>
         <a href="about.html">About Me</a>
@@ -92,7 +92,7 @@
     <div class="container">
         <section class="section">
             <h2>About Me</h2>
-            <p>I am a hardware engineer with a deep interest in astrophysics and nuclear physics. I enjoy designing complex systems and exploring the intersection of technology and science.</p>
+            <p>I'm passionate about hardware engineering with a deep interest in astrophysics and nuclear physics. I enjoy designing complex systems and exploring the intersection of technology and science.</p>
         </section>
         <section class="section">
             <h2>Recent Projects</h2>
