--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <body>
     <header>
         <h1>Digital-Logic.xyz</h1>
-        <p>Hardware Engineering | </p>
+        <p>Hardware Engineering</p>
     </header>
     <nav>
         <a href="about.html">About Me</a>
