--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Hardware Engineer Portfolio">
     <title>Digital-Logic.xyz</title>
+    <link rel="icon" type="image/x-icon" href="/images/icon.png">
     <style>
         body {
             font-family: Arial, sans-serif;
