--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="My Projects - Hardware Engineering Portfolio">
-  <title>digital-logic.xyz</title>
+  <title>Digital-Logic.xyz</title>
+  <link rel="icon" type="image/x-icon" href="/images/icon.png">
   <style>
     body {
       font-family: Arial, sans-serif;
