--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
         <a href="about.html">About Me</a>
         <a href="projects.html">Projects</a>
         <a href="contact.html">Contact</a>
+        <a href="JSmine.html">JSMine</a>
     </nav>
     <div class="container">
         <section class="section">
