--- a/JSMine.html
+++ b/JSMine.html
@@ -2,10 +2,105 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>JSMine Game</title>
+    <link rel="icon" type="image/x-icon" href="/images/icon.png">
     <script src="index.js" defer></script>
-    <title>Title</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+            min-height: 100vh;
+            padding-bottom: 60px; /* Footer height */
+        }
+        header {
+            background-color: #444;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+        nav {
+            background-color: #333;
+            overflow: hidden;
+        }
+        nav a {
+            float: left;
+            display: block;
+            color: white;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+        nav a:hover {
+            background-color: #575757;
+        }
+        .container {
+            padding: 20px;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+        .game-section {
+            margin: 20px 0;
+            padding: 30px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+        #gameCanvas {
+            border: 2px solid #ddd;
+            border-radius: 4px;
+            background-color: #fff;
+            transform: scale(2);
+            transform-origin: top center;
+            margin: 40px 0;
+        }
+        .instructions {
+            margin: 20px auto;
+            max-width: 600px;
+            padding: 15px;
+            background-color: #f9f9f9;
+            border-radius: 6px;
+        }
+        footer {
+            background-color: #222;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            position: fixed;
+            left: 0;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-    <canvas id="gameCanvas" width="320" height="320" ></canvas>
+    <header>
+        <h1>JSMine</h1>
+        <p>A little project adventure game</p>
+    </header>
+    <nav>
+        <a href="about.html">About Me</a>
+        <a href="projects.html">Projects</a>
+        <a href="contact.html">Contact</a>
+        <a href="JSMine.html">JSMine</a>
+    </nav>
+    
+    <div class="container">
+        <section class="game-section">
+            <h2>Play JSMine</h2>
+            <div class="instructions">
+                <p>WASD to move, click to mine tiles.</p>
+            </div>
+            <canvas id="gameCanvas" width="320" height="320"></canvas>
+        </section>
+    </div>
+
+    <footer>
+        <p>&copy; 2024 siubikYT. All rights reserved.</p>
+    </footer>
 </body>
 </html>
