--- a/JSMine.html
+++ b/JSMine.html
@@ -14,7 +14,7 @@
             background-color: #f4f4f4;
             color: #333;
             min-height: 100vh;
-            padding-bottom: 60px; /* Footer height */
+            padding-bottom: 60px;
         }
         header {
             background-color: #444;
