--- a/JSMine.html
+++ b/JSMine.html
@@ -14,7 +14,8 @@
             background-color: #f4f4f4;
             color: #333;
             min-height: 100vh;
-            padding-bottom: 60px;
+            padding-bottom: 80px;
+            box-sizing: border-box;
         }
         header {
             background-color: #444;
@@ -50,13 +51,22 @@
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             text-align: center;
         }
+        .game-container {
+            width: 100%;
+            max-width: 640px;
+            margin: 0 auto;
+            overflow: visible;
+            height: 600px;
+        }
         #gameCanvas {
             border: 2px solid #ddd;
             border-radius: 4px;
             background-color: #fff;
-            transform: scale(2);
+            transform: scale(1.5);
             transform-origin: top center;
-            margin: 40px 0;
+            margin: 20px auto 60px;
+            display: block;
+            max-width: 100%;
         }
         .instructions {
             margin: 20px auto;
@@ -74,33 +84,175 @@
             left: 0;
             bottom: 0;
             width: 100%;
+            height: 40px; /* Fixed height for footer */
+        }
+
+        /* Feedback Section Styles */
+        .feedback-section {
+            margin: 40px 0;
+            padding: 30px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+
+        .feedback-form {
+            max-width: 500px;
+            margin: 0 auto;
+        }
+
+        .form-group {
+            margin-bottom: 20px;
+            text-align: left;
+        }
+
+        .form-group label {
+            display: block;
+            margin-bottom: 8px;
+            color: #666;
+            font-weight: bold;
+        }
+
+        .form-group input,
+        .form-group textarea {
+            width: 100%;
+            padding: 10px;
+            border: 1px solid #ddd;
+            border-radius: 4px;
+            box-sizing: border-box;
+            font-size: 16px;
+        }
+
+        .form-group textarea {
+            height: 120px;
+            resize: vertical;
+        }
+
+        button[type="submit"] {
+            background-color: #444;
+            color: white;
+            padding: 12px 30px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            font-size: 16px;
+            transition: background-color 0.3s ease;
+            margin-top: 15px;
+        }
+
+        button[type="submit"]:hover {
+            background-color: #575757;
+        }
+
+        .success-message {
+            color: #28a745;
+            padding: 15px;
+            margin-top: 20px;
+            background-color: #e8f5e9;
+            border-radius: 4px;
+            display: none;
+        }
+
+        @media (max-width: 768px) {
+            #gameCanvas {
+                transform: scale(1.2);
+            }
+
+            .game-container {
+                height: 450px;
+            }
+
+            .container {
+                padding: 10px;
+            }
+
+            .game-section, .feedback-section {
+                padding: 20px 15px;
+            }
         }
     </style>
 </head>
 <body>
-    <header>
-        <h1>JSMine</h1>
-        <p>A little project adventure game</p>
-    </header>
-    <nav>
-        <a href="about.html">About Me</a>
-        <a href="projects.html">Projects</a>
-        <a href="contact.html">Contact</a>
-        <a href="JSMine.html">JSMine</a>
-    </nav>
-    
-    <div class="container">
-        <section class="game-section">
-            <h2>Play JSMine</h2>
-            <div class="instructions">
-                <p>WASD to move, click to mine tiles.</p>
-            </div>
-            <canvas id="gameCanvas" width="320" height="320"></canvas>
-        </section>
-    </div>
+<header>
+    <h1>JSMine</h1>
+    <p>A little project adventure game</p>
+</header>
+<nav>
+    <a href="about.html">About Me</a>
+    <a href="projects.html">Projects</a>
+    <a href="contact.html">Contact</a>
+    <a href="JSMine.html">JSMine</a>
+</nav>
 
-    <footer>
-        <p>&copy; 2024 siubikYT. All rights reserved.</p>
-    </footer>
+<div class="container">
+    <section class="game-section">
+        <h2>Play JSMine</h2>
+        <div class="instructions">
+            <p>WASD to move, click to mine tiles.</p>
+        </div>
+        <div class="game-container">
+            <canvas id="gameCanvas" width="320" height="320"></canvas>
+        </div>
+    </section>
+
+    <section class="feedback-section">
+        <h2>Game Feedback</h2>
+        <form id="feedbackForm" class="feedback-form" action="https://formspree.io/f/meoaoknq" method="POST">
+            <div class="form-group">
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name" required>
+            </div>
+
+            <div class="form-group">
+                <label for="email">Email (optional):</label>
+                <input type="email" id="email" name="email">
+            </div>
+
+            <div class="form-group">
+                <label for="message">Feedback:</label>
+                <textarea id="message" name="message" required></textarea>
+            </div>
+
+            <button type="submit">Send Feedback</button>
+        </form>
+        <div class="success-message" id="successMessage">
+            Thank you for your feedback!
+        </div>
+    </section>
+</div>
+
+<footer>
+    <p>&copy; 2024 siubikYT. All rights reserved.</p>
+</footer>
+
+<script>
+    document.getElementById('feedbackForm').addEventListener('submit', async (e) => {
+        e.preventDefault();
+
+        const form = e.target;
+        const formData = new FormData(form);
+
+        try {
+            const response = await fetch(form.action, {
+                method: 'POST',
+                body: formData,
+                headers: {
+                    'Accept': 'application/json'
+                }
+            });
+
+            if (response.ok) {
+                document.getElementById('successMessage').style.display = 'block';
+                form.reset();
+                setTimeout(() => {
+                    document.getElementById('successMessage').style.display = 'none';
+                }, 3000);
+            }
+        } catch (error) {
+            console.error('Error submitting form:', error);
+        }
+    });
+</script>
 </body>
 </html>
