--- a/JSMine.html
+++ b/JSMine.html
@@ -182,7 +182,7 @@
     <a href="about.html">About Me</a>
     <a href="projects.html">Projects</a>
     <a href="contact.html">Contact</a>
-    <a href="">Home</a>
+    <a href="index.html">Home</a>
 </nav>
 
 <div class="container">
