--- a/projects.html
+++ b/projects.html
@@ -99,7 +99,7 @@
 <nav>
   <a href="index.html">Home</a>
   <a href="about.html">About Me</a>
-  <a href="projects.html">Projects</a>
+  <a href="JSMine.html">JSMine</a>
   <a href="contact.html">Contact</a>
 </nav>
 <div class="container">
