--- a/projects.html
+++ b/projects.html
@@ -391,8 +391,8 @@
                     <p>This project implements a complete 8-bit CPU with the following features:</p>
                     <ul>
                         <li>16 custom instructions</li>
-                        <li>8 general-purpose registers</li>
-                        <li>256 bytes of addressable memory</li>
+                        <li>2 RAM buffers</li>
+                        <li>7 bytes of addressable memory</li>
                         <li>Hardware stack implementation</li>
                         <li>Arithmetic and logical operations</li>
                     </ul>
