--- a/index.html
+++ b/index.html
@@ -432,6 +432,10 @@
     <h2>Recent Projects</h2>
     <ul class="project-list">
       <li class="project-item">
+        <h3><i class="fas fa-gamepad"></i> JSMine</h3>
+        <p>A JavaScript mining adventure game. Featured on the website.</p>
+      </li>
+      <li class="project-item">
         <h3><i class="fas fa-microchip"></i> 8-bit CPU</h3>
         <p>An 8-bit CPU designed from scratch, featuring a custom instruction set and ALU architecture.</p>
       </li>
