--- a/projects.html
+++ b/projects.html
@@ -403,7 +403,26 @@ MOV R1, #10    ; Load value 10 into R1
 ADD R2, R0, R1 ; Add R0 and R1, store in R2
 JMP loop       ; Jump to loop label</pre>
                     </div>
-                    <a href="cpu.html" class="btn"><i class="fas fa-microchip"></i> View Project Details</a>
+                </div>
+            </div>
+        </div>
+
+                <div class="project-item slide-up">
+            <div class="project-header" onclick="toggleProject(this)">
+                <i class="fas fa-gamepad"></i>
+                <h3>JSMine</h3>
+            </div>
+            <div class="project-content">
+                <div class="project-content-inner">
+                    <p>An 8-bit CPU designed from scratch, featuring a custom instruction set and ALU architecture.</p>
+                    <img src="/images/JSMineExample.png" alt="JSMine">
+                    <p>JSMine is my first web game. It was a great way to learn the basics of canvases in HTML and JS. You can play the game down below. The controls are: </p>
+                    <ul>
+                        <li>WASD to move</li>
+                        <li>Left click on tiles to break them</li>
+                        <li>Collect resources</li>
+                    </ul>
+                    <a href="JSMine.html" class="btn"><i class="fas fa-gamepad"></i> Try out JSMine</a>
                 </div>
             </div>
         </div>
