--- a/projects.html
+++ b/projects.html
@@ -414,9 +414,10 @@ JMP loop       ; Jump to loop label</pre>
             </div>
             <div class="project-content">
                 <div class="project-content-inner">
-                    <p>An 8-bit CPU designed from scratch, featuring a custom instruction set and ALU architecture.</p>
+                    <p>JSMine is my first web game.
+                        It was a great way to learn the basics of canvases in HTML and JS.</p>
                     <img src="/images/JSMineExample.png" alt="JSMine">
-                    <p>JSMine is my first web game. It was a great way to learn the basics of canvases in HTML and JS. You can play the game down below. The controls are: </p>
+                    <p>You can play the game down below. The controls are: </p>
                     <ul>
                         <li>WASD to move</li>
                         <li>Left click on tiles to break them</li>
